# LynxesMojo

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: README.md  bench.yml  ci.yml
crates/lynxes/: Cargo.toml
crates/lynxes-cli/: Cargo.toml
crates/lynxes-cli/src/: main.rs
crates/lynxes-connect/: Cargo.toml
crates/lynxes-connect/src/: lib.rs
crates/lynxes-connect/src/connector/: arangodb_connector.rs  flight_connector.rs  gf_connector.rs  mod.rs  neo4j_connector.rs  sparql_connector.rs  trait.rs
crates/lynxes-core/: Cargo.toml
crates/lynxes-core/benches/: astar_vs_dijkstra.rs  csr_vs_linear.rs  in_csr_build.rs  mutation_bench.rs  parallel_expand.rs  pattern_match_bench.rs  sampling_bench.rs  terminal_projection.rs
crates/lynxes-core/src/: error.rs  lib.rs  mojo_runtime.rs  types.rs
crates/lynxes-core/src/algo/: centrality.rs  community.rs  connected_components.rs  mod.rs  pagerank.rs  partition.rs  sampling.rs  shortest_path.rs  traversal.rs
crates/lynxes-core/src/connector/: mod.rs  trait.rs
crates/lynxes-core/src/display/: mod.rs  model.rs  profile.rs  projection.rs  summary.rs  width.rs
crates/lynxes-core/src/frame/: csr.rs  edge_frame.rs  graph_frame.rs  mod.rs  mutable_graph_frame.rs  node_frame.rs
crates/lynxes-core/src/query/: expr.rs  logical_plan.rs  mod.rs
crates/lynxes-core/src/query/optimizer/: early_termination.rs  mod.rs  partition_parallel.rs  pattern_expansion.rs  predicate_pushdown.rs  projection_pushdown.rs  subgraph_caching.rs  traversal_pruning.rs
crates/lynxes-core/src/schema/: mod.rs  schema.rs  types.rs
crates/lynxes-core/tests/: algo_astar.rs  algo_betweenness.rs  algo_centrality.rs  algo_community.rs  algo_connected_components.rs  algo_k_shortest.rs  algo_pagerank.rs  algo_shortest_path.rs  algo_traversal.rs  connector_arango.rs  connector_gf.rs  connector_neo4j.rs  connector_sparql.rs  connector_trait.rs  csr_tests.rs  display_projection.rs  frame_edge.rs  frame_graph.rs  gnn.rs  integration.rs  io_gf_parser.rs  io_gfb_bytes.rs  io_gfb_streaming.rs  io_parquet.rs  mojo_structural_features.rs  node_frame_tests.rs  optimizer.rs  query_lazy.rs
crates/lynxes-core/tests/common/: mod.rs
crates/lynxes-io/: Cargo.toml
crates/lynxes-io/src/: lib.rs
crates/lynxes-io/src/io/: csv.rs  frame_builder.rs  gf.pest  gf_parser.rs  gf_writer.rs  gfb.rs  mod.rs  parquet.rs
crates/lynxes-lazy/: Cargo.toml
crates/lynxes-lazy/src/: lib.rs
crates/lynxes-lazy/src/query/: lazy_graph_frame.rs  mod.rs
crates/lynxes-lazy/src/query/executor/: aggregation.rs  expr_eval.rs  filter.rs  mod.rs  pattern.rs  tests.rs  traversal.rs
crates/lynxes-plan/: Cargo.toml
crates/lynxes-plan/src/: lib.rs
crates/lynxes-plan/src/query/: mod.rs
crates/lynxes-python/: Cargo.toml
crates/lynxes-python/src/: lib.rs
crates/lynxes-wasm/: Cargo.toml
crates/lynxes-wasm/src/: lib.rs
crates/lynxes/src/: lib.rs
examples/: README.md
examples/cli/: README.md  convert.md  inspect.md  query.md
examples/data/: example_complex.gf  example_simple.gf  example_weighted.gf
examples/python/: README.md
examples/python/recipes/: README.md  community_detection.py  io_roundtrip.py  pagerank.py
examples/python/tutorials/: 01_read_and_inspect.py  02_lazy_expand.py  03_first_algorithm.py  README.md
examples/rust/: README.md
examples/rust/tutorials/: 01_read_gf.rs  02_lazy_collect.rs  03_first_algorithm.rs  README.md
kernels/mojo/: lynxes_mojo_kernels.mojo
py-lynxes/: README.md  pyproject.toml
py-lynxes/src/lynxes/: __init__.py  _csv.py
py-lynxes/tests/benchmark/: bench_vs_igraph.py  bench_vs_networkx.py
py-lynxes/tests/unit/: conftest.py  test_algorithms.py  test_api_smoke.py  test_connectors.py  test_display.py  test_errors.py  test_examples.py  test_expr.py  test_frames.py  test_gnn.py  test_gnn_dataframe.py  test_io.py  test_kg.py  test_lazy.py  test_mojo_features.py  test_mutation.py
scripts/: build_mojo_kernels.sh  check_mojo_kernels.sh  install_git_hooks.ps1  sync_pyproject.py
tests/fixtures/: README.md
tests/fixtures/expected/: README.md
www/: index.html  index.js
