[package]
name = "lynxes-connect"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-ipc = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
lynxes-core = { path = "../lynxes-core" }
lynxes-io = { path = "../lynxes-io" }
lynxes-lazy = { path = "../lynxes-lazy" }
lynxes-plan = { path = "../lynxes-plan" }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arrow-flight = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
