[package]
name = "lynxes-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WASM bindings for the Lynxes graph engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
lynxes-core = { path = "../lynxes-core" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
